Fix form item layout bug when zoom out, close #6097

--- a/components/form/style/index.less
+++ b/components/form/style/index.less
@@ -222,6 +222,9 @@ form {
   .@{ant-prefix}-select,
   .@{ant-prefix}-cascader-picker {
     width: 100%;
+    &:only-child {
+      display: block;
+    }
   }
 }
 
